[gd_scene load_steps=8 format=3 uid="uid://cahnueyrbn7xe"]

[ext_resource type="Script" path="res://Scenes/IntroSequence/IntroController.gd" id="1_5qpgf"]
[ext_resource type="PackedScene" uid="uid://bvoqd8kopfytf" path="res://Scenes/IntroSequence/TitleScreen/TitleScreen.tscn" id="2_7j1g2"]
[ext_resource type="Script" path="res://Scenes/IntroSequence/VBoxContainer.gd" id="2_ange8"]
[ext_resource type="Script" path="res://Scenes/IntroSequence/TitleScreen/AutoRatio.gd" id="3_0ifsn"]
[ext_resource type="PackedScene" uid="uid://dowwu4o680cny" path="res://Scenes/IntroSequence/StoryPages/StoryPage1.tscn" id="3_bae1t"]
[ext_resource type="PackedScene" uid="uid://bt6q7nxjuku1m" path="res://Scenes/IntroSequence/StoryPages/StoryPage2.tscn" id="4_d6r6o"]
[ext_resource type="PackedScene" uid="uid://bx11o0j00qmvr" path="res://Scenes/IntroSequence/CharacterSelect/CharacterSelect.tscn" id="5_qsh34"]

[node name="IntroSequence" type="CanvasLayer"]
script = ExtResource("1_5qpgf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 2592)
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 2
script = ExtResource("2_ange8")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
ratio = 1.7778
alignment_vertical = 2
script = ExtResource("3_0ifsn")

[node name="TitleScreen" parent="VBoxContainer/AspectRatioContainer" instance=ExtResource("2_7j1g2")]
unique_name_in_owner = true
layout_mode = 2

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
ratio = 1.7778
alignment_vertical = 0
script = ExtResource("3_0ifsn")

[node name="StoryPage1" parent="VBoxContainer/AspectRatioContainer2" instance=ExtResource("3_bae1t")]
unique_name_in_owner = true
layout_mode = 2

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
ratio = 1.7778
alignment_vertical = 0
script = ExtResource("3_0ifsn")

[node name="StoryPage2" parent="VBoxContainer/AspectRatioContainer3" instance=ExtResource("4_d6r6o")]
unique_name_in_owner = true
layout_mode = 2

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
ratio = 1.7778
alignment_vertical = 0
script = ExtResource("3_0ifsn")

[node name="CharacterSelect" parent="VBoxContainer/AspectRatioContainer4" instance=ExtResource("5_qsh34")]
unique_name_in_owner = true
layout_mode = 2
